# querymt-desktop

./: .gitignore  README.md  flake.nix  package-lock.json  package.json  rust-toolchain.toml  svelte.config.js  vite.config.ts
.github/workflows/: release.yml
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  deep_links.rs  keychain.rs  lib.rs  main.rs  sidecar.rs
src/lib/design/: tokens.ts
src/lib/domain/: inbox.test.ts  inbox.ts  markdown.test.ts  markdown.ts  runtimes.ts  session-conversation.test.ts  session-conversation.ts  session-scroll.test.ts  session-scroll.ts  session-snapshot.test.ts  session-snapshot.ts  session-updates.test.ts  session-updates.ts  sessions.test.ts  sessions.ts  types.ts
src/lib/querymt/: acp-client.ts  browser-client.ts  config-options.ts  notifications.ts  profile-templates.ts  querymt-extensions.test.ts  querymt-extensions.ts  sidecar.ts  transport.test.ts  transport.ts
src/lib/stores/: agents.svelte.test.ts  agents.svelte.ts  appearance.svelte.ts  command-palette.svelte.ts  inbox.svelte.test.ts  inbox.svelte.ts  mock-data.ts  window-decorations.svelte.ts  workspaces.svelte.ts
src/lib/types/: lucide-svelte.d.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/__tests__/: landing-session-start.test.ts
src/routes/agents/: +page.svelte
src/routes/automations/: +page.svelte
src/routes/inbox/: +page.svelte
src/routes/mesh/: +page.svelte
src/routes/sessions/: +page.svelte
src/routes/settings/: +page.svelte
(+55 files in other folders)
