[package]
name = "querymt-desktop"
version = "0.1.0"
description = "QueryMT Desktop"
authors = ["QueryMT"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shlex = "2"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
toml = "1.0"

[lib]
name = "querymt_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
